[package]
name = "launch_pad"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "launch_pad"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"] }
